Wrong condition for using non-immediate oops on AArch64

XMLWordPrintable

    • b24
    • aarch64

      With the introduction of loom, nmethod entry barriers were added for all GCs. So far, the use of nmethod entry barriers has implied that nmethod oops are patched in the instruction stream. That is no longer the case. A condition was added to make sure we still get non-immediate oops on AArch64 for collectors that use nmethod entry barriers, and support immediate oops. However, the condition was messed up, so we instead end up doing the wrong thing. We should do the right thing.

            Assignee:
            Erik Ă–sterlund
            Reporter:
            Erik Ă–sterlund
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: