8286376: Wrong condition for using non-immediate oops on AArch64